log/Laser_DAQ_Camera_App_log_190212_170637.txt
2019-02-12T17:06:38|CRITICAL|root|Unhandled exception:Traceback (most recent call last):
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\Laser_DAQ_Camera_App.py", line 35, in <module>
    app = Laser_DAQ_Camera_App(sys.argv)
  File "C:\LabPrograms\Python\BaseMicroscopeModified_ScopeFoundry\BaseMicroscopeAppModified.py", line 16, in __init__
    super().__init__(*kwds) # *kwds is needed since in the main we pass as argument sys.argv. Without
  File "C:\ProgramData\Anaconda3\lib\site-packages\ScopeFoundry\base_app.py", line 332, in __init__
    self.setup()
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\Laser_DAQ_Camera_App.py", line 22, in setup
    from DaqControlledMeasurement import DaqControlledMeasurement
  File "C:\LabPrograms\Python\DAQ-Laser-Camera\DaqControlledMeasurement.py", line 212
    print(self.ni_co_1.duty_cycle.val=self.camera.exposure_time.val*self.ni_co_1.freq.val)
         ^
SyntaxError: keyword can't be an expression

